# Community_Structure_in_Networks

./: .gitignore  Algo2.c  Algo2.h  Algo2_new.c  Algo2_new.h  Algo3.c  Algo3.h  CMakeLists.txt  Group_handler.c  Group_handler.h  Maximization.c  Maximization.h  Modularity.c  Modularity.h  Power_iter.c  Power_iter.h  Power_iter_new.c  Power_iter_new.h  fileHandler.c  fileHandler.h  main.c  maximization.c  maximization.h  safe_memory.c  safe_memory.h  structures.h
